--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-router-dom": "^5.1.2",
         "react-scripts": "^3.3.0",
         "react-smooth-scrollbar": "^8.0.6",
+        "react-spinners": "^0.9.0",
         "redux": "^4.0.4",
         "redux-saga": "^1.1.1",
         "smooth-scrollbar": "^8.5.1",
