--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react": "^16.10.2",
         "react-big-calendar": "^0.23.0",
         "react-dom": "^16.10.2",
+        "react-html-parser": "^2.0.2",
         "react-i18next": "^10.13.1",
         "react-leaflet": "^2.6.3",
         "react-quill": "^1.3.3",
