--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.10.2",
         "react-big-calendar": "^0.23.0",
+        "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^16.10.2",
         "react-html-parser": "^2.0.2",
         "react-i18next": "^10.13.1",
