--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react-big-calendar": "^0.23.0",
         "react-copy-to-clipboard": "^5.0.2",
         "react-dom": "^16.10.2",
+        "react-flip-move": "^3.0.4",
         "react-html-parser": "^2.0.2",
         "react-i18next": "^10.13.1",
         "react-leaflet": "^2.6.3",
